#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-46
2013-10-06 Andy
- add "no-sizeof" tag to few classes to suppress warnings

Tag: V00-04-45
2013-10-01 Andy
- BldDataSpectrometerV0: make it non-value-type and add auto constructor

Tag: V00-04-44
2013-09-30 Andy
- Mike added new type BldDataSpectrometerV0

Tag: V00-04-43
2013-09-26 Andy Salnikov
- fix bitfield order in opal1k.ConfigV1

Tag: V00-04-42
2013-09-26 Matt Weaver
- documented new Bld.BldDataEBeamV4 fields
- added Control.ConfigV3 with L3T accepted events field
- output in pdsdata V07-01-00
	
Tag: V00-04-41
2013-09-25 Andy Salnikov
- fix for incorrect offsets of data arrays in epics

Tag: V00-04-40
2013-09-24 Andy Salnikov
- add map() method to evr.OuputMap and OutputMapV2

Tag: V00-04-39
2013-09-24 Matt Weaver
- Added L3T.ConfigV1,DataV1 for level 3 trigger/filter data
- output in pdsdata V07-00-04
	
Tag: V00-04-38
2013-09-24 Andy Salnikov
- Bld.BldDataAcqADCV1 needs xtc config which is Acquiris.ConfigV1

Tag: V00-04-37
2013-09-20 Andy Salnikov
- add forgotten Bld.BldDataAcqADCV1 type

Tag: V00-04-36
2013-09-18 Andy Salnikov
- define conversion constructor Timepix::DataV2(Timepix::DataV1), this needs
  psddl V00-08-14, the constructor itself has to be implemented separately
- add methods Camer.FrameV1.depth_bytes()
- add data_size() method to Timepix.DataV* classes

Tag: V00-04-35
2013-09-18 Matt Weaver
- moved pdsdata/xtc/SrcAlias class into alias.ddl.xml (Alias::SrcAlias)

Tag: V00-04-34
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-04-33
2013-09-13 Matt Weaver
- add auto-constructors for more config types 